debug and add some features